<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Unigrid Hedgehog Native Image</name>
    <groupId>org.unigrid.hedgehog</groupId>
    <artifactId>hedgehog-native</artifactId>
    <version>0.0.8-SNAPSHOT</version>
    <packaging>jar</packaging>
    <parent>
        <groupId>org.unigrid.hedgehog</groupId>
        <artifactId>hedgehog-parent</artifactId>
        <version>0.0.8-SNAPSHOT</version>
    </parent>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <graal.version>25.0.2</graal.version>
        <native.maven.plugin.version>0.11.3</native.maven.plugin.version>
        <surefireArgLine />
    </properties>
    <profiles>
        <profile>
            <id>Linux</id>
            <activation>
                <os>
                    <name>Linux</name>
                </os>
            </activation>
            <properties>
                <executable.name>hedgehog.bin</executable.name>
                <extraNativeOption>-H:+StaticExecutableWithDynamicLibC</extraNativeOption>
            </properties>
        </profile>
        <profile>
            <id>Windows</id>
            <activation>
                <os>
                    <family>Windows</family>
                </os>
            </activation>
            <properties>
                <executable.name>hedgehog</executable.name>
                <extraNativeOption>-DNOP=true</extraNativeOption>
                <url>
                    https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-25.0.2/graalvm-community-jdk-25.0.2_windows-x64_bin.zip</url>
                <platform>windows</platform>
                <unzipLocation>${basedir}\target\unziped</unzipLocation>
                <downloadName>graal.zip</downloadName>
                <downloadLocation>${basedir}\target\download/</downloadLocation>
                <arthur.nativeImage>
                    ${unzipLocation}\graalvm-ce-java17-${graal.version}\bin\native-image.cmd</arthur.nativeImage>
            </properties>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>com.googlecode.maven-download-plugin</groupId>
                            <artifactId>download-maven-plugin</artifactId>
                            <executions>
                                <execution>
                                    <phase>process-resources</phase>
                                    <goals>
                                        <goal>wget</goal>
                                    </goals>
                                    <configuration>
                                        <url>${url}</url>
                                        <outputFileName>${downloadName}</outputFileName>
                                        <outputDirectory>${downloadLocation}</outputDirectory>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-antrun-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>default-cli</id>
                                    <phase>package</phase>
                                    <goals>
                                        <goal>run</goal>
                                    </goals>
                                    <configuration>
                                        <target>
                                            <unzip src="${downloadLocation}${downloadName}"
                                                dest="${unzipLocation}" />
                                        </target>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.13.0</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.13.0</version>
        </dependency>

        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>${graal.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.graalvm.nativeimage</groupId>
            <artifactId>svm</artifactId>
            <version>${graal.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.unigrid.hedgehog</groupId>
            <artifactId>hedgehog</artifactId>
            <version>0.0.8-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.unigrid.hedgehog</groupId>
            <artifactId>hedgehog-common</artifactId>
            <version>0.0.8-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.28.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>net.harawata</groupId>
            <artifactId>appdirs</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <type>jar</type>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-version-properties</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>
                                        ${project.basedir}/../application/src/main/resources-filtered</directory>
                                    <includes>
                                        <include>application.properties</include>
                                    </includes>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>
                        @{surefireArgLine}
                        -javaagent:"${settings.localRepository}"/com/github/hazendaz/jmockit/jmockit/2.1.0/jmockit-2.1.0.jar
                        -Dorg.jboss.netty.debug=true
                    </argLine>
                    <trimStackTrace>false</trimStackTrace>
                    <reuseForks>false</reuseForks>
                    <forkCount>${system.numcores}</forkCount>
                    <systemPropertyVariables>
                        <testoutput.target>${project.build.directory}</testoutput.target>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>25</release>
                    <showDeprecation>true</showDeprecation>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.42</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.tentackle</groupId>
                <artifactId>tentackle-jlink-maven-plugin</artifactId>
                <version>17.12.0.0</version>
                <configuration>
                    <mainClass>org.unigrid.hedgehog.Hedgehog</mainClass>
                    <stripDebug>true</stripDebug>
                    <excludeModules>jdk.jfr</excludeModules>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jlink</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.9.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.googlecode.maven-download-plugin</groupId>
                <artifactId>download-maven-plugin</artifactId>
                <version>1.13.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.6.3</version>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native.maven.plugin.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>build-native</id>
                        <goals>
                            <goal>compile-no-fork</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                    <configuration>
                        <imageName>hedgehog</imageName>
                        <mainClass>org.unigrid.hedgehog.nativeimage.NativeImage</mainClass>
                        <fallback>false</fallback>
                        <buildArgs>
                            <buildArg>--no-fallback</buildArg>
                            <buildArg>--allow-incomplete-classpath</buildArg>
                            <buildArg>--features=org.unigrid.hedgehog.nativeimage.BundleFeature</buildArg>
                            <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                            <buildArg>--enable-http</buildArg>
                            <buildArg>--enable-https</buildArg>

                            <buildArg>--initialize-at-run-time=java.net.InetAddress,java.net.Inet4Address,java.net.Inet6Address,java.net.InetSocketAddress</buildArg>
                            <buildArg>--initialize-at-run-time=java.net.InetAddress,java.net.Inet4Address,java.net.Inet6Address,java.net.InetSocketAddress,java.net.NetworkInterface</buildArg>

                            <buildArg>--initialize-at-build-time=org.slf4j</buildArg>
                            <buildArg>--initialize-at-build-time=ch.qos.logback</buildArg>
                            <buildArg>--initialize-at-build-time=net.harawata.appdirs</buildArg>
                            <buildArg>--initialize-at-build-time=org.apache.commons.exec</buildArg>
                            <buildArg>--initialize-at-build-time=org.unigrid.hedgehog.nativeimage.windows.ShellFolderResolverPatch</buildArg>
                            <buildArg>--initialize-at-build-time=com.sun.jna</buildArg>

                            <buildArg>-H:IncludeResources=version.properties</buildArg>
                            <buildArg>-H:IncludeResources=application.properties</buildArg>
                            <buildArg>-H:IncludeResources=.*\.properties$</buildArg>
                            <buildArg>-H:IncludeResources=.*\.zip$</buildArg>
                            
                            <buildArg>-J--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core=ALL-UNNAMED</buildArg>
                            <buildArg>-J--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.hosted=ALL-UNNAMED</buildArg>
                            <buildArg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</buildArg>
                            <buildArg>-J--add-opens=java.base/java.util=ALL-UNNAMED</buildArg>
                            <buildArg>-J--add-opens=java.base/java.nio=ALL-UNNAMED</buildArg>

                            <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                        </buildArgs>
                    </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.12.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>pl.gdela</groupId>
                <artifactId>socomo-maven</artifactId>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>9.9.1</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>analyze</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>../application/src/main/resources-filtered</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.16.0</version>
                <configuration>
                    <includeTests>true</includeTests>
                    <targetJdk>25</targetJdk>
                    <rulesets>
                        <ruleset>${project.basedir}/pmd.xml</ruleset>
                    </rulesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.6.0.0</version>
            </plugin>
        </plugins>
    </reporting>
</project>
